@@ -11,6 +11,7 @@
   - FloatingWindow now honours the dockwidget's max-size, if there's a single
     dock widget docked. Tabbed cases are more difficult since QStackedLayout doesn't
     propagate size constraints.
+  - Added MainWindowBase::frameCountChanged()
 
 * v1.3.1 (unreleased)
   - Improve restoring layout when RestoreOption_RelativeToMainWindow is used (#171)
